# llm_std

llm1/: pyproject.toml
llm1/chapter2/: basic.py
llm1/webapp/: chat.py
