[tool.poetry]
name = "text-lecture"
version = "0.1.0"
description = ""
authors = ["suhyeonP <ahah12k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.8,<4.0.0"
openai = "^1.34.0"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
streamlit = "^1.35.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
